@@ -32,7 +32,7 @@ my $button = $m->scomp(
     '/widgets/profile/button.mc',
     name     => "pick_related_".$type,
     button   => "edit_lgreen",
-    js       => qq{onclick="openWindow('/workflow/profile/} . $container->get_object_type . qq{/container/edit_related_$type.html?id=} . $container->get_id . qq{', undefined, { closeOnUnload: true }); return false"},
+    js       => qq{onclick="openWindow('/workflow/profile/} . $container->get_object_type . qq{/container/edit_related_$type.html?id=} . $container->get_id . qq{', 'BricolageRelatedPopup', { closeOnUnload: true }); return false"},
     useTable => 0
 );
 
