@@ -182,7 +182,7 @@ $num = $m->comp( '/widgets/container_prof/container_prof.mc',
             name    => "add_contributor",
             button  => "add_lgreen",
             useTable => 0,
-            js      => qq{onclick="openWindow('/workflow/profile/media/contributors.html', undefined, { closeOnUnload: true }); return false"}
+            js      => qq{onclick="openWindow('/workflow/profile/media/contributors.html', 'BricolageContributorPopup', { closeOnUnload: true }); return false"}
         &>
     </div>
     
